Fix code captions overlapping with code snippet

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,6 @@
   text-align: center;
 }
 
-.prose-lg picture + figcaption,
-.prose-lg pre + figcaption {
+.prose-lg picture + figcaption {
   margin-top: -24px;
 }
